// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriverCode contains the actualLanguage URL if is auto 1`] = `
<div
  className="sc-dnqmqq itLWpz"
>
  <a
    className="sc-gqjmRU icUzDC"
    href="Python.driver"
    target="_blank"
  >
    <img
      alt="Driver Code on GitHub"
      className="sc-iwsKbI bbcOHy"
      src="github.svg"
    />
    <span
      className="sc-gZMcBi inpfcO"
    >
      Driver Code
    </span>
  </a>
</div>
`;

exports[`DriverCode contains the driver URL if selectedLanguage is not auto 1`] = `
<div
  className="sc-dnqmqq itLWpz"
>
  <a
    className="sc-gqjmRU icUzDC"
    href="Java.driver"
    target="_blank"
  >
    <img
      alt="Driver Code on GitHub"
      className="sc-iwsKbI bbcOHy"
      src="github.svg"
    />
    <span
      className="sc-gZMcBi inpfcO"
    >
      Driver Code
    </span>
  </a>
</div>
`;

exports[`Header has the button disabled if is loading, even if user has typed 1`] = `
<header
  className="sc-bdVaJa kFviGb"
>
  <h1
    className="sc-bwzfXH gRdHVw"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb fGUeFM"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX gkhDQm"
  >
    <div
      className="sc-bZQynM eJfGpj"
    >
      <label
        className="sc-EHOje iUXYdf"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="sc-gzVnrw buVHMZ"
        id="language-selector"
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Python auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-dnqmqq itLWpz"
      >
        <a
          className="sc-gqjmRU icUzDC"
          href="Python.driver"
          target="_blank"
        >
          <img
            alt="Driver Code on GitHub"
            className="sc-iwsKbI bbcOHy"
            src="github.svg"
          />
          <span
            className="sc-gZMcBi inpfcO"
          >
            Driver Code
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-bZQynM eJfGpj"
    >
      <button
        className="sc-htoDjs dSXvxR"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header has the button disabled if is not loading but user has not typed 1`] = `
<header
  className="sc-bdVaJa kFviGb"
>
  <h1
    className="sc-bwzfXH gRdHVw"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb fGUeFM"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX gkhDQm"
  >
    <div
      className="sc-bZQynM eJfGpj"
    >
      <label
        className="sc-EHOje iUXYdf"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="sc-gzVnrw buVHMZ"
        id="language-selector"
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Python auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-dnqmqq itLWpz"
      >
        <a
          className="sc-gqjmRU icUzDC"
          href="Python.driver"
          target="_blank"
        >
          <img
            alt="Driver Code on GitHub"
            className="sc-iwsKbI bbcOHy"
            src="github.svg"
          />
          <span
            className="sc-gZMcBi inpfcO"
          >
            Driver Code
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-bZQynM eJfGpj"
    >
      <button
        className="sc-htoDjs dSXvxR"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header has the button enabled if user has typed and is not loading 1`] = `
<header
  className="sc-bdVaJa kFviGb"
>
  <h1
    className="sc-bwzfXH gRdHVw"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb fGUeFM"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX gkhDQm"
  >
    <div
      className="sc-bZQynM eJfGpj"
    >
      <label
        className="sc-EHOje iUXYdf"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="sc-gzVnrw buVHMZ"
        id="language-selector"
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Python auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-dnqmqq itLWpz"
      >
        <a
          className="sc-gqjmRU icUzDC"
          href="Python.driver"
          target="_blank"
        >
          <img
            alt="Driver Code on GitHub"
            className="sc-iwsKbI bbcOHy"
            src="github.svg"
          />
          <span
            className="sc-gZMcBi inpfcO"
          >
            Driver Code
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-bZQynM eJfGpj"
    >
      <button
        className="sc-htoDjs dSXvxR"
        disabled={false}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly 1`] = `
<header
  className="sc-bdVaJa kFviGb"
>
  <h1
    className="sc-bwzfXH gRdHVw"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb fGUeFM"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX gkhDQm"
  >
    <div
      className="sc-bZQynM eJfGpj"
    >
      <label
        className="sc-EHOje iUXYdf"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="sc-gzVnrw buVHMZ"
        id="language-selector"
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Java auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-dnqmqq itLWpz"
      >
        <a
          className="sc-gqjmRU icUzDC"
          href="Java.driver"
          target="_blank"
        >
          <img
            alt="Driver Code on GitHub"
            className="sc-iwsKbI bbcOHy"
            src="github.svg"
          />
          <span
            className="sc-gZMcBi inpfcO"
          >
            Driver Code
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-bZQynM eJfGpj"
    >
      <button
        className="sc-htoDjs dSXvxR"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;
